--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.0.1
 Date: 2020-04-14
 Author: Hisashi Noma
 Maintainer: Hisashi Noma <noma@ism.ac.jp>
-Description: A R package for computing optimism-corrected predictive accuracy measures for multivariable prediction models. It enables computations of the optimism-corrected C-statistics by bootstrap correction methods (Harrell, 0.632, and 0.632+ methods) by logistic regression models by ML, ridge, and lasso regressions. Also, it can compute bootstrap-based optimism-corrected confidence intervals for the predictive accuracy measures proposed by Noma et al. (2020). Other functions would be added if requested.
+Description: A R package for computing optimism-corrected predictive accuracy measures of multivariable prediction models. It enables computations of the optimism-corrected C-statistics by bootstrap correction methods (the Harrell, 0.632, and 0.632+ methods) for logistic regression models by ML, ridge, and lasso regressions. Also, it can compute bootstrap-based optimism-corrected confidence intervals for the predictive accuracy measures proposed by Noma et al. (2020). Other functions would be added in future.
 Depends:
   MASS, foreach, doSNOW, doParallel, pROC, glmnet
 License: GPL-3
